<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/dashBoard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDashboard"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <LinearLayout
            android:id="@+id/top_sq"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="5"
            android:background="@color/colorInactive"
            android:orientation="horizontal">

        <android.support.constraint.ConstraintLayout
                android:id="@+id/topClockContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <TextView

                    android:id="@+id/top_clock_mask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:alpha="0.15"
                    android:fontFamily="@font/digital"
                    android:rotation="180"
                    android:text="88:88"
                    android:textAlignment="center"
                    android:textColor="@color/bottomOffClockText"
                    android:textSize="130sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView

                    android:id="@+id/top_clock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/digital"
                    android:rotation="180"
                    android:textAlignment="center"
                    android:textColor="@color/colorInactiveText"
                    android:textSize="130sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>


    <LinearLayout
            android:id="@+id/buttonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="80dp"
            android:paddingRight="80dp">

        <FrameLayout
                android:id="@+id/settingsFrame"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="0dp"
                android:paddingBottom="0dp">

            <Button
                    android:id="@+id/settings_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_settings_black_24dp">

            </Button>
        </FrameLayout>

        <FrameLayout
                android:id="@+id/pauseFrame"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <Button
                    android:id="@+id/pause_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_pause_black_24dp">

            </Button>
        </FrameLayout>

        <FrameLayout
                android:id="@+id/restartFrame"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <Button
                    android:id="@+id/restart_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_replay_black_24dp">

            </Button>
        </FrameLayout>


    </LinearLayout>

    <LinearLayout
            android:id="@+id/bot_sq"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="5"
            android:background="@color/colorInactive"
            android:orientation="horizontal">

        <android.support.constraint.ConstraintLayout
                android:id="@+id/botClockContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <TextView
                    android:id="@+id/bot_clock_mask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:alpha="0.15"
                    android:fontFamily="@font/digital"
                    android:text="88:88"
                    android:textAlignment="center"
                    android:textColor="@color/bottomOffClockText"
                    android:textSize="130sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/bot_clock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/digital"
                    android:textAlignment="center"
                    android:textColor="@color/colorInactiveText"
                    android:textSize="130sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</LinearLayout>
